--- a/extensions/requirements.txt
+++ b/extensions/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.7.4.post0; python_version >= "3.6" and python_full_version >= "3.5.3"
+aiohttp>=3.7.4; python_version >= "3.6" and python_full_version >= "3.5.3"
 async-timeout==3.0.1; python_version >= "3.6" and python_full_version >= "3.5.3"
 asynctest==0.13.0; python_version >= "3.5"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
@@ -61,6 +61,6 @@ toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" or pytho
 typing-extensions==3.7.4.3; python_version >= "3.6" and python_full_version >= "3.5.3" and python_version < "3.8"
 typing-inspect==0.6.0; python_version >= "3.7" and python_version < "4.0"
 uritemplate==3.0.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
-urllib3==1.26.4; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
+urllib3>=1.26.5; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
 yarl==1.6.3; python_version >= "3.6" and python_full_version >= "3.5.3"
 zipp==3.4.1; python_version < "3.8" and python_version >= "3.6"
