--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,10 +31,6 @@ jobs:
       packages: write
 
     steps:
-      - name: Timestamp
-        id: date
-        run: echo "::set-output name=date::$(date +%s)"
-        
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -47,31 +43,22 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
       - name: Extract Docker metadata
-        if: github.event_name != 'pull_request'
         id: meta
         uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,prefix={{branch}}-{{sha}}-,value=${{ steps.date.outputs.date }}
+            type=ref,suffix=-{{date 'YYYYMMDDHHmmss'}},event=branch
+            type=ref,suffix=-{{date 'YYYYMMDDHHmmss'}},event=tag
+            type=ref,suffix=-{{date 'YYYYMMDDHHmmss'}},event=pr
             type=ref,event=branch
             type=ref,event=tag
-
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
-        if: github.event_name == 'pull_request'
-        id: meta-pr
-        uses: docker/metadata-action@v3
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
             type=ref,event=pr
-            
+
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
