--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.black]
-line-length = 98
-target-version = ['py37']
+line-length = 100
+target-version = ['py310']
 
 [tool.isort]
 profile = "black"
@@ -35,6 +35,9 @@ pydantic-yaml = "^0.8.0"
 isort = "^5.10.1"
 black = "^22.8.0"
 pylint = "^2.6.0"
+pytest = "^7.1.3"
+asynctest = "^0.13.0"
+pytest-asyncio = "^0.19.0"
 
 [tool.pylint.format]
 max-line-length = 100
@@ -48,6 +51,11 @@ disable = [
 cache_dir = "/tmp/pytest_cache"
 log_cli = true
 log_level = "debug"
+# Caused by async tests...
+filterwarnings = [
+  'ignore:"@coroutine" decorator is deprecated:DeprecationWarning'
+]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
