turn role command into slash command

--- a/config.yaml
+++ b/config.yaml
@@ -23,9 +23,9 @@ extensions:
     intents:
       - messages
       - message_content
-  - name: roles
+  - name: role
     intents:
-      - messages
+      - guilds
   - name: status
     intents:
       - messages
