--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,6 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:best-practices",
-    ":automergeMinor",
-    ":automergeDigest",
-    ":rebaseStalePrs"
-  ],
-  "schedule": [
-    "on tuesday"
+    "github>nalabelle/renovate-config"
   ]
 }
